--- a/MyApplication2/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication2/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -10,7 +10,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.a_hashimoto.threadmaster.MainActivity"
     android:orientation="vertical">
-
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -39,13 +38,21 @@
             android:visibility="visible"
             android:text="@string/button_text3"/>
 
+        <fragment
+            android:name="com.example.a_hashimoto.threadmaster.fragment.TabFragment"
+            android:id="@+id/tab_fragment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/image"
+        android:layout_gravity="bottom"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:transitionName="image"/>
 
-    <fragment
-        android:name="com.example.a_hashimoto.threadmaster.fragment.TabFragment"
-        android:id="@+id/tab_fragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
-</LinearLayout>
+
+</FrameLayout>
