--- a/MyApplication2/app/src/main/res/values/styles.xml
+++ b/MyApplication2/app/src/main/res/values/styles.xml
@@ -8,4 +8,13 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="BaseAppTheme" parent="android:Theme.Material">
+        <!-- enable window content transitions -->
+        <item name="android:windowContentTransitions">true</item>
+
+
+        <!-- specify shared element transitions -->
+
+    </style>
+
 </resources>
