--- a/MyApplication2/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication2/app/src/main/res/layout/activity_main.xml
@@ -2,15 +2,15 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-    
+
     <!--<data>-->
-        <!---->
-        <!--<variable-->
-            <!--name="gotiusaVM"-->
-            <!--type=""-->
+    <!---->
+    <!--<variable-->
+    <!--name="gotiusaVM"-->
+    <!--type=""-->
     <!--</data>-->
 
-    <FrameLayout
+    <android.support.constraint.ConstraintLayout
         android:id="@+id/activity_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -21,41 +21,34 @@
         android:paddingTop="@dimen/activity_vertical_margin"
         tools:context="com.example.a_hashimoto.threadmaster.MainActivity">
 
-        <LinearLayout
+        <Button
+            android:id="@+id/thread_button"
+            android:layout_width="@dimen/button_size_width"
+            android:layout_height="@dimen/button_size_height"
+            android:text="@string/button_text1"
+            app:layout_editor_absoluteX="100dp"
+            app:layout_editor_absoluteY="100dp" />
+
+        <Button
+            android:id="@+id/thread_button2"
+            android:layout_width="@dimen/button_size_width"
+            android:layout_height="@dimen/button_size_height"
+            android:text="@string/button_text2"
+            android:visibility="visible" />
+
+        <Button
+            android:id="@+id/thread_button3"
+            android:layout_width="@dimen/button_size_width"
+            android:layout_height="@dimen/button_size_height"
+            android:text="@string/button_text3"
+            android:visibility="visible" />
+
+        <fragment
+            android:id="@+id/tab_fragment"
+            android:name="com.example.a_hashimoto.threadmaster.fragment.TabFragment"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <Button
-                android:id="@+id/thread_button"
-                android:layout_width="@dimen/button_size_width"
-                android:layout_height="@dimen/button_size_height"
-                android:text="@string/button_text1"
-                android:visibility="visible" />
-
-            <Button
-                android:id="@+id/thread_button2"
-                android:layout_width="@dimen/button_size_width"
-                android:layout_height="@dimen/button_size_height"
-                android:text="@string/button_text2"
-                android:visibility="visible" />
-
-            <Button
-                android:id="@+id/thread_button3"
-                android:layout_width="@dimen/button_size_width"
-                android:layout_height="@dimen/button_size_height"
-                android:text="@string/button_text3"
-                android:visibility="visible" />
-
-            <fragment
-                android:id="@+id/tab_fragment"
-                android:name="com.example.a_hashimoto.threadmaster.fragment.TabFragment"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
+            android:layout_height="wrap_content" />
 
 
-
-    </FrameLayout>
+    </android.support.constraint.ConstraintLayout>
 </layout>
